feat: support auto complete parent tasks

--- a/package.json
+++ b/package.json
@@ -14,25 +14,23 @@
 	"devDependencies": {
 		"@codemirror/autocomplete": "^6.0.0",
 		"@codemirror/commands": "^6.0.0",
-		"@codemirror/lang-html": "^6.0.0",
-		"@codemirror/basic-setup": "^0.20.0",
 		"@codemirror/lang-css": "^6.0.0",
+		"@codemirror/lang-html": "^6.0.0",
 		"@codemirror/language": "https://github.com/lishid/cm-language",
-		"@codemirror/rangeset": "^0.19.1",
 		"@codemirror/lint": "^6.0.0",
 		"@codemirror/search": "^6.0.0",
 		"@codemirror/state": "^6.0.0",
-		"@codemirror/view": "^6.0.0",
 		"@codemirror/stream-parser": "https://github.com/lishid/stream-parser",
-		"codemirror": "^6.0.0",
+		"@codemirror/view": "^6.0.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
+		"codemirror": "^6.0.0",
 		"esbuild": "0.13.12",
-		"obsidian": "latest",
+		"obsidian": "^1.8.7",
+		"regexp-match-indices": "^1.0.2",
 		"tslib": "2.4.0",
-		"typescript": "4.7.3",
-		"regexp-match-indices": "^1.0.2"
+		"typescript": "4.7.3"
 	}
 }
