--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-task-progress-bar",
-	"name": "Task Progress Bar",
-	"version": "3.2.0",
+	"name": "Task Genius",
+	"version": "3.3.0",
 	"minAppVersion": "0.15.2",
-	"description": "A task progress bar plugin for tasks in Obsidian.",
+	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"author": "Boninall",
 	"authorUrl": "https://github.com/Quorafind",
 	"isDesktopOnly": false
