--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
 	"name": "obsidian-task-progress-bar",
-	"version": "3.2.0",
-	"description": "A task progress bar plugin for tasks in Obsidian.",
+	"version": "3.3.0",
+	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"bumpversion": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
+	"keywords": [
+		"obsidian",
+		"task",
+		"progress",
+		"bar",
+		"task management",
+		"task tracking",
+		"task progress",
+		"task status",
+		"task cycle",
+		"task marks"
+	],
 	"author": "Boninall",
 	"license": "MIT",
 	"devDependencies": {
