chore: bump version

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "obsidian-task-progress-bar",
-	"version": "3.6.1",
+	"version": "3.8.0",
 	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"bumpversion": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [
 		"obsidian",
