--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,15 +9,9 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
-		"lib": [
-			"DOM",
-			"ES5",
-			"ES6",
-			"ES7"
-		],
-		"allowSyntheticDefaultImports": true
+		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"allowSyntheticDefaultImports": true,
+		"types": ["obsidian-typings"]
 	},
-	"include": [
-		"**/*.ts"
-	]
+	"include": ["**/*.ts"]
 }
