--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"extract-translations": "cross-env node scripts/extract-translations.cjs",
+		"generate-locale-files": "cross-env node scripts/generate-locale-files.cjs"
 	},
 	"keywords": [
 		"obsidian",
@@ -38,6 +40,7 @@
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"codemirror": "^6.0.0",
+		"cross-env": "^7.0.3",
 		"esbuild": "0.13.12",
 		"monkey-around": "^3.0.0",
 		"obsidian": "^1.8.7",
