--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"extract-translations": "cross-env node scripts/extract-translations.cjs",
-		"generate-locale-files": "cross-env node scripts/generate-locale-files.cjs"
+		"e-t": "cross-env node scripts/extract-translations.cjs",
+		"g-l": "cross-env node scripts/generate-locale-files.cjs"
 	},
 	"keywords": [
 		"obsidian",
