--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-task-progress-bar",
-	"version": "6.2.2",
+	"version": "7.0.0",
 	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
@@ -42,11 +42,15 @@
 		"codemirror": "^6.0.0",
 		"cross-env": "^7.0.3",
 		"esbuild": "0.13.12",
+		"esbuild-plugin-inline-worker": "https://github.com/mitschabaude/esbuild-plugin-inline-worker",
 		"monkey-around": "^3.0.0",
 		"obsidian": "^1.8.7",
 		"obsidian-typings": "^2.39.0",
 		"regexp-match-indices": "^1.0.2",
 		"tslib": "2.4.0",
 		"typescript": "4.7.3"
+	},
+	"dependencies": {
+		"uuid": "^11.1.0"
 	}
 }
