--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@codemirror/state": "^6.0.0",
 		"@codemirror/stream-parser": "https://github.com/lishid/stream-parser",
 		"@codemirror/view": "^6.0.0",
+		"@datastructures-js/queue": "^4.2.3",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
