--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
+		"inlineSourceMap": true,
+		"inlineSources": true,
 		"module": "ESNext",
 		"target": "ES6",
 		"allowJs": true,
@@ -13,5 +15,5 @@
 		"allowSyntheticDefaultImports": true,
 		"types": ["obsidian-typings"]
 	},
-	"include": ["**/*.ts", "src/utils/types/**/*.d.ts"]
+	"include": ["src/**/*.ts", "src/**/*.tsx"],
 }
