--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"strictNullChecks": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
 		"allowSyntheticDefaultImports": true,
-		"types": ["obsidian-typings"]
+		"types": ["obsidian-typings", "utils/types/worker.d.ts"]
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx"],
+	"include": ["src/**/*.ts", "src/**/*.tsx", "src/utils/workers/**/*.ts"],
 }
