--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"obsidian": "^1.8.7",
 		"obsidian-typings": "^2.39.0",
 		"regexp-match-indices": "^1.0.2",
+		"rrule": "^2.8.1",
 		"tslib": "2.4.0",
 		"typescript": "4.7.3"
 	},
