--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,15 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: 16
+            - name: Install pnpm
+              uses: pnpm/action-setup@v2
+              with:
+                  version: 8
             - name: Build
               id: build
               run: |
-                  npm ci
-                  npm run build
+                  pnpm install
+                  pnpm run build
                   mkdir ${{ env.PLUGIN_NAME }}
                   cp main.js manifest.json styles.css ${{ env.PLUGIN_NAME }}
                   zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }}
