--- a/package.json
+++ b/package.json
@@ -25,15 +25,9 @@
 	"author": "Boninall",
 	"license": "MIT",
 	"devDependencies": {
-		"@codemirror/autocomplete": "^6.0.0",
-		"@codemirror/commands": "^6.0.0",
-		"@codemirror/lang-css": "^6.0.0",
-		"@codemirror/lang-html": "^6.0.0",
 		"@codemirror/language": "https://github.com/lishid/cm-language",
-		"@codemirror/lint": "^6.0.0",
 		"@codemirror/search": "^6.0.0",
 		"@codemirror/state": "^6.0.0",
-		"@codemirror/stream-parser": "https://github.com/lishid/stream-parser",
 		"@codemirror/view": "^6.0.0",
 		"@datastructures-js/queue": "^4.2.3",
 		"@types/node": "^16.11.6",
@@ -46,7 +40,7 @@
 		"esbuild-plugin-inline-worker": "https://github.com/mitschabaude/esbuild-plugin-inline-worker",
 		"monkey-around": "^3.0.0",
 		"obsidian": "^1.8.7",
-		"obsidian-typings": "^2.39.0",
+		"obsidian-typings": "2.44.3",
 		"regexp-match-indices": "^1.0.2",
 		"rrule": "^2.8.1",
 		"tslib": "2.4.0",
