--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
 		"isolatedModules": true,
 		"strictNullChecks": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
-		"allowSyntheticDefaultImports": true,
-		"types": ["obsidian-typings"]
+		"allowSyntheticDefaultImports": true
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx", "src/utils/workers/**/*.ts"]
 }
