--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
 		"typescript": "4.7.3"
 	},
 	"dependencies": {
+		"@popperjs/core": "^2.11.8",
+		"@types/sortablejs": "^1.15.8",
 		"date-fns": "^4.1.0",
 		"localforage": "^1.10.0",
-		"obsidian-daily-notes-interface": "^0.9.4"
+		"obsidian-daily-notes-interface": "^0.9.4",
+		"sortablejs": "^1.15.6"
 	}
 }
