--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "obsidian-task-progress-bar",
-	"version": "8.10.1",
+	"name": "task-genius",
+	"version": "9.0.0-beta.1",
 	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
