--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -8,7 +8,11 @@ on:
     types: [opened, synchronize]
     # IMPORTANT: Change 'main' to your default branch if it's different (e.g., 'master')
     branches:
-      - main
+      - master
+  push:
+    # Also trigger on direct push to any branch (for beta releases)
+    branches:
+      - '**'
 
 env:
   PLUGIN_NAME: obsidian-task-genius
@@ -20,7 +24,7 @@ permissions:
 
 jobs:
   build-and-release-beta:
-    # This job only runs if the latest commit message on the PR contains '[release-beta]'
+    # This job only runs if the latest commit message contains '[release-beta]'
     if: contains(github.event.head_commit.message, '[release-beta]')
     runs-on: ubuntu-latest
     steps:
@@ -58,12 +62,13 @@ jobs:
       - name: 'Create Beta Pre-Release'
         uses: softprops/action-gh-release@v2
         with:
-          # Use the body of the PR for the release notes
+          # Use the body of the PR for the release notes, or commit info for direct push
           body: |
-            Automated beta release for PR #${{ github.event.pull_request.number }}.
+            ${{ github.event_name == 'pull_request' && format('Automated beta release for PR #{0}.', github.event.pull_request.number) || 'Automated beta release from direct push.' }}
             Commit: `${{ github.sha }}`
+            Branch: `${{ github.ref_name }}`
 
-            ${{ github.event.pull_request.body }}
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.body || github.event.head_commit.message }}
           
           # Mark this as a pre-release, so it doesn't count as a latest official release
           prerelease: true
