--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -58,19 +58,26 @@ jobs:
               id: get_version
               run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
-            # --- Get commit messages since last beta release ---
-            - name: "Get commit messages since last beta release"
+            # --- Get commit messages since last release ---
+            - name: "Get commit messages since last release"
               id: get_commits
               run: |
-                  # Get the latest beta release tag (tags starting with 'v' and containing beta or pre-release)
-                  LAST_BETA_TAG=$(git tag -l "v*" --sort=-version:refname | head -1)
+                  # Get the most recent tag that is reachable from the current commit
+                  # This will find the closest tag regardless of whether it's a public release or not
+                  LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
 
-                  if [ -z "$LAST_BETA_TAG" ]; then
-                    echo "No previous beta release found, getting all commits from the beginning"
-                    COMMIT_MESSAGES=$(git log --pretty=format:"- %s (%an)" --no-merges)
+                  if [ -z "$LAST_TAG" ]; then
+                    echo "No previous tag found, getting all commits from the beginning"
+                    COMMIT_MESSAGES=$(git log --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
+                    echo "Getting all commits since repository creation"
                   else
-                    echo "Getting commits since last beta release: $LAST_BETA_TAG"
-                    COMMIT_MESSAGES=$(git log ${LAST_BETA_TAG}..HEAD --pretty=format:"- %s (%an)" --no-merges)
+                    echo "Getting commits since last tag: $LAST_TAG"
+                    COMMIT_MESSAGES=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
+                    
+                    # Check if this tag corresponds to a GitHub release
+                    TAG_TYPE="tag"
+                    # Try to determine if this was a public release by checking GitHub API
+                    # Note: This is optional and may not work in all environments
                   fi
 
                   # Handle empty commit messages
@@ -83,8 +90,8 @@ jobs:
                   echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
                   echo "EOF" >> $GITHUB_ENV
 
-                  # Also save the last beta tag for reference
-                  echo "LAST_BETA_TAG=$LAST_BETA_TAG" >> $GITHUB_ENV
+                  # Also save the last tag for reference
+                  echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
 
             - name: "Build and package plugin"
               id: build
@@ -103,7 +110,7 @@ jobs:
                   body: |
                       ${{ github.event_name == 'pull_request' && format('🚀 Automated beta release for PR #{0}', github.event.pull_request.number) || '🚀 Automated beta release' }}
 
-                      ## 📝 Changes since last beta release${{ env.LAST_BETA_TAG && format(' ({0})', env.LAST_BETA_TAG) || '' }}:
+                      ## 📝 Changes since last release${{ env.LAST_TAG && format(' ({0})', env.LAST_TAG) || '' }}:
 
                       ${{ env.COMMIT_MESSAGES }}
 
