chore: update workflow

--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -62,9 +62,9 @@ jobs:
             - name: "Get commit messages since last release"
               id: get_commits
               run: |
-                  # Get the most recent tag that is reachable from the current commit
-                  # This will find the closest tag regardless of whether it's a public release or not
-                  LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+                  # Get the most recent tag by creation date (not reachability)
+                  # This will find the newest tag regardless of branch ancestry
+                  LAST_TAG=$(git tag --sort=-version:refname | head -n 1 2>/dev/null || echo "")
 
                   if [ -z "$LAST_TAG" ]; then
                     echo "No previous tag found, getting all commits from the beginning"
@@ -72,12 +72,12 @@ jobs:
                     echo "Getting all commits since repository creation"
                   else
                     echo "Getting commits since last tag: $LAST_TAG"
-                    COMMIT_MESSAGES=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
+                    # Get the commit hash of the tag
+                    TAG_COMMIT=$(git rev-list -n 1 $LAST_TAG)
+                    echo "Tag $LAST_TAG points to commit: $TAG_COMMIT"
                     
-                    # Check if this tag corresponds to a GitHub release
-                    TAG_TYPE="tag"
-                    # Try to determine if this was a public release by checking GitHub API
-                    # Note: This is optional and may not work in all environments
+                    # Get commits since that tag commit
+                    COMMIT_MESSAGES=$(git log ${TAG_COMMIT}..HEAD --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
                   fi
 
                   # Handle empty commit messages
