--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -22,9 +22,8 @@ jobs:
     build-and-release-beta:
         if: |
             contains(github.event.head_commit.message, '[release-beta]') && (
-              github.event_name == 'push' || 
-              (github.event_name == 'pull_request' && 
-               (github.event.pull_request.author_association == 'OWNER'))
+              github.event_name == 'pull_request' && 
+               (github.event.pull_request.author_association == 'OWNER')
             )
         runs-on: ubuntu-latest
         steps:
@@ -56,36 +55,36 @@ jobs:
             - name: "Get commit messages since last release"
               id: get_commits
               run: |
-                  # Get the most recent tag that is reachable from the current commit
-                  # This will find the closest tag regardless of whether it's a public release or not
-                  LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+                  # Get the most recent tag by creation date (not reachability)
+                   # This will find the newest tag regardless of branch ancestry
+                   LAST_TAG=$(git tag --sort=-version:refname | head -n 1 2>/dev/null || echo "")
 
-                  if [ -z "$LAST_TAG" ]; then
-                    echo "No previous tag found, getting all commits from the beginning"
-                    COMMIT_MESSAGES=$(git log --pretty=format:"- %s (%an)" --no-merges)
-                    echo "Getting all commits since repository creation"
-                  else
-                    echo "Getting commits since last tag: $LAST_TAG"
-                    COMMIT_MESSAGES=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%an)" --no-merges)
-                    
-                    # Check if this tag corresponds to a GitHub release
-                    TAG_TYPE="tag"
-                    # Try to determine if this was a public release by checking GitHub API
-                    # Note: This is optional and may not work in all environments
-                  fi
+                   if [ -z "$LAST_TAG" ]; then
+                     echo "No previous tag found, getting all commits from the beginning"
+                     COMMIT_MESSAGES=$(git log --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
+                     echo "Getting all commits since repository creation"
+                   else
+                     echo "Getting commits since last tag: $LAST_TAG"
+                     # Get the commit hash of the tag
+                     TAG_COMMIT=$(git rev-list -n 1 $LAST_TAG)
+                     echo "Tag $LAST_TAG points to commit: $TAG_COMMIT"
+                     
+                     # Get commits since that tag commit
+                     COMMIT_MESSAGES=$(git log ${TAG_COMMIT}..HEAD --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
+                   fi
 
-                  # Handle empty commit messages
-                  if [ -z "$COMMIT_MESSAGES" ]; then
-                    COMMIT_MESSAGES="- No new commits since last release"
-                  fi
+                   # Handle empty commit messages
+                   if [ -z "$COMMIT_MESSAGES" ]; then
+                     COMMIT_MESSAGES="- No new commits since last release"
+                   fi
 
-                  # Save commit messages to environment variable (handle multiline)
-                  echo "COMMIT_MESSAGES<<EOF" >> $GITHUB_ENV
-                  echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
-                  echo "EOF" >> $GITHUB_ENV
+                   # Save commit messages to environment variable (handle multiline)
+                   echo "COMMIT_MESSAGES<<EOF" >> $GITHUB_ENV
+                   echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
+                   echo "EOF" >> $GITHUB_ENV
 
-                  # Also save the last tag for reference
-                  echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
+                   # Also save the last tag for reference
+                   echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
 
             - name: "Build and package plugin"
               id: build
