--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -133,11 +133,13 @@ jobs:
               id: get_version
               run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
-            - name: "Get commit messages since last release"
+            - name: "Get commit messages since last tag"
               if: steps.check_release_tag.outputs.SHOULD_RELEASE == 'true'
               id: get_commits
               run: |
+                  # Get the most recent tag (including pre-releases)
                   LAST_TAG=$(git tag --sort=-version:refname | head -n 1 2>/dev/null || echo "")
+                  
                   if [ -z "$LAST_TAG" ]; then
                     echo "No previous tag found, getting all commits from the beginning"
                     COMMIT_MESSAGES=$(git log --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
@@ -146,8 +148,9 @@ jobs:
                     TAG_COMMIT=$(git rev-list -n 1 $LAST_TAG)
                     COMMIT_MESSAGES=$(git log ${TAG_COMMIT}..HEAD --pretty=format:"- %s (%an) [%h](https://github.com/${{ github.repository }}/commit/%H)" --no-merges)
                   fi
+                  
                   if [ -z "$COMMIT_MESSAGES" ]; then
-                    COMMIT_MESSAGES="- No new commits since last release"
+                    COMMIT_MESSAGES="- No new commits since last tag"
                   fi
                   echo "COMMIT_MESSAGES<<EOF" >> $GITHUB_ENV
                   echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
@@ -170,7 +173,7 @@ jobs:
                   body: |
                       ${{ github.event_name == 'pull_request' && format('🚀 Automated beta release for PR #{0}', github.event.pull_request.number) || '🚀 Automated beta release' }}
 
-                      ## 📝 Changes since last release${{ env.LAST_TAG && format(' ({0})', env.LAST_TAG) || '' }}:
+                      ## 📝 Changes since last tag${{ env.LAST_TAG && format(' ({0})', env.LAST_TAG) || '' }}:
 
                       ${{ env.COMMIT_MESSAGES }}
 
