chore: update workflow scripts

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "task-genius",
-	"version": "9.8.0-beta.0",
+	"version": "9.7.6",
 	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"version": "node version-bump.mjs && git add manifest.json manifest-beta.json versions.json",
 		"e-t": "cross-env node scripts/extract-translations.cjs",
 		"g-l": "cross-env node scripts/generate-locale-files.cjs",
 		"test": "jest",
@@ -17,11 +17,12 @@
 		"release:minor": "release-it minor",
 		"release:major": "release-it major",
 		"release:dry": "release-it --dry-run",
-		"release:beta": "release-it --config .release-it.beta.cjs --preRelease=beta",
-		"release:beta:patch": "release-it patch --config .release-it.beta.cjs --preRelease=beta",
-		"release:beta:minor": "release-it minor --config .release-it.beta.cjs --preRelease=beta",
-		"release:beta:major": "release-it major --config .release-it.beta.cjs --preRelease=beta",
-		"release:beta:dry": "release-it --config .release-it.beta.cjs --preRelease=beta --dry-run"
+		"release:beta": "node scripts/smart-beta-release.mjs",
+		"release:beta:continue": "node scripts/smart-beta-release.mjs continue",
+		"release:beta:patch": "node scripts/smart-beta-release.mjs patch",
+		"release:beta:minor": "node scripts/smart-beta-release.mjs minor",
+		"release:beta:major": "node scripts/smart-beta-release.mjs major",
+		"release:beta:dry": "node scripts/smart-beta-release.mjs --dry-run"
 	},
 	"keywords": [
 		"obsidian",
