--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "task-genius",
-	"version": "9.7.6",
+	"version": "9.8.0-beta.0",
 	"description": "Comprehensive task management plugin for Obsidian with progress bars, task status cycling, and advanced task tracking features.",
 	"main": "main.js",
 	"scripts": {
