--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"codemirror": "^6.0.0",
+		"conventional-changelog-cli": "^5.0.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^17.2.1",
 		"esbuild": "0.25.9",
