--- a/package.json
+++ b/package.json
@@ -63,13 +63,11 @@
 		"jszip": "^3.10.1",
 		"monkey-around": "^3.0.0",
 		"obsidian": "^1.8.7",
-		"regexp-match-indices": "^1.0.2",
 		"release-it": "^19.0.4",
-		"rrule": "^2.8.1",
 		"semver": "^7.7.2",
 		"ts-jest": "^29.1.0",
-		"tslib": "2.4.0",
-		"typescript": "4.7.3"
+		"typescript": "4.7.3",
+		"tslib": "2.4.0"
 	},
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
@@ -77,7 +75,9 @@
 		"chrono-node": "^2.7.6",
 		"date-fns": "^4.1.0",
 		"localforage": "^1.10.0",
+		"rrule": "^2.8.1",
 		"obsidian-daily-notes-interface": "^0.9.4",
-		"sortablejs": "^1.15.6"
+		"sortablejs": "^1.15.6",
+		"regexp-match-indices": "^1.0.2"
 	}
 }
